@@ -272,18 +272,29 @@ CREATE TABLE `devices` (
   `hostname` varchar(100) DEFAULT NULL,
   `ip_addr` varchar(100) DEFAULT NULL,
   `type` int(2) DEFAULT '0',
+  `custom_vendor` varchar(156) DEFAULT NULL,
+  `custom_model` varchar(124) DEFAULT NULL,
   `description` varchar(256) DEFAULT NULL,
   `sections` varchar(1024) DEFAULT NULL,
   `snmp_community` varchar(100) DEFAULT NULL,
-  `snmp_version` set('0','1','2') DEFAULT '0',
+  `snmp_version` set('0','1','2','3') DEFAULT '0',
   `snmp_port` mediumint(5) unsigned DEFAULT '161',
-  `snmp_timeout` mediumint(5) unsigned DEFAULT '1000000',
-  `snmp_queries` VARCHAR(128)  NULL  DEFAULT NULL,
-  `rack` int(11) unsigned NULL DEFAULT null,
-  `rack_start` int(11) unsigned DEFAULT null,
-  `rack_size` int(11) unsigned DEFAULT null,
-  `location` INT(11)  unsigned  NULL  DEFAULT NULL,
+  `snmp_timeout` mediumint(5) unsigned DEFAULT '500',
+  `snmp_queries` varchar(128) DEFAULT NULL,
+  `snmp_v3_sec_level` set('none','noAuthNoPriv','authNoPriv','authPriv') DEFAULT 'none',
+  `snmp_v3_auth_protocol` set('none','MD5','SHA') DEFAULT 'none',
+  `snmp_v3_auth_pass` varchar(64) DEFAULT NULL,
+  `snmp_v3_priv_protocol` set('none','DES','AES') DEFAULT 'none',
+  `snmp_v3_priv_pass` varchar(64) DEFAULT NULL,
+  `snmp_v3_ctx_name` varchar(64) DEFAULT NULL,
+  `snmp_v3_ctx_engine_id` varchar(64) DEFAULT NULL,
+  `rack` int(11) unsigned DEFAULT NULL,
+  `rack_start` int(11) unsigned DEFAULT NULL,
+  `rack_size` int(11) unsigned DEFAULT NULL,
+  `location` int(11) unsigned DEFAULT NULL,
   `editDate` timestamp NULL DEFAULT NULL ON UPDATE CURRENT_TIMESTAMP,
+  `custom_device field` varchar(32) DEFAULT NULL COMMENT 'aaaaaaa',
+  `custom_test4` varchar(4) DEFAULT NULL COMMENT '4 max',
   PRIMARY KEY (`id`),
   KEY `hostname` (`hostname`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
